--- a/src/main/resources/route_admin.conf
+++ b/src/main/resources/route_admin.conf
@@ -1,1 +1,10 @@
+GET		/admin/index						IndexController.home
 GET		/admin/signin_out					IndexController.signin_out
+GET		/admin/add_film						FilmController.film_page
+GET		/admin/film/:pid					FilmController.film_page
+POST	/admin/save_film					FilmController.save_film
+POST	/admin/update_film					FilmController.update_film
+POST	/admin/delete_film					FilmController.delete_film
+GET		/admin/tags							TagController.tags
+GET		/admin/delete_tag					TagController.delete_tag
+
