--- a/src/main/resources/blade.conf
+++ b/src/main/resources/blade.conf
@@ -1,5 +1,5 @@
 #要进行IOC管理的包
-blade.ioc=me.biezhi.film.service.impl.*
+blade.ioc=com.jewel.service.impl.*
 #视图文件目录
 blade.prefix=/WEB-INF/views/
 #视图文件后缀
