--- a/src/main/resources/ds.conf
+++ b/src/main/resources/ds.conf
@@ -1,5 +1,5 @@
 driverClassName = com.mysql.jdbc.Driver
-url = jdbc:mysql://127.0.0.1:3306/film?useUnicode=true&characterEncoding=utf-8
+url = jdbc:mysql://127.0.0.1:3306/jewel?useUnicode=true&characterEncoding=utf-8
 username = root
 password = root
 
