--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>me.biezhi</groupId>
-	<artifactId>jewel</artifactId>
+	<artifactId>precious</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1</version>
 	<name>film Maven Webapp</name>
@@ -48,7 +48,7 @@
 	</dependencies>
 	
 	<build>
-		<finalName>jewel</finalName>
+		<finalName>precious</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
