--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
 		<async-supported>true</async-supported>
 		<init-param>
 			<param-name>bootstrap</param-name>
-			<param-value>com.jewel.App</param-value>
+			<param-value>com.precious.App</param-value>
 		</init-param>
 	</servlet>
 	<servlet-mapping>
