--- a/src/main/resources/blade.conf
+++ b/src/main/resources/blade.conf
@@ -1,5 +1,5 @@
 #要进行IOC管理的包
-blade.ioc=com.precious.service.impl.*
+blade.ioc=com.precious.service.impl.*,com.precious.controller.*
 #视图文件目录
 blade.prefix=/WEB-INF/views/
 #视图文件后缀
