--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>com.bladejava</groupId>
 			<artifactId>blade-core</artifactId>
-			<version>1.5.1-alpha</version>
+			<version>1.5.1-beta</version>
 		</dependency>
 		<dependency>
 			<groupId>com.bladejava</groupId>
