--- a/src/main/resources/route_admin.conf
+++ b/src/main/resources/route_admin.conf
@@ -1,4 +1,6 @@
 GET		/admin/index						IndexController.home
+GET		/admin/films						FilmController.films
+GET		/admin/films/:page					FilmController.films
 GET		/admin/signin_out					IndexController.signin_out
 GET		/admin/add_film						FilmController.film_page
 GET		/admin/film/:pid					FilmController.film_page
