--- a/src/main/resources/route_admin.conf
+++ b/src/main/resources/route_admin.conf
@@ -8,5 +8,10 @@ POST	/admin/save_film					FilmController.save_film
 POST	/admin/update_film					FilmController.update_film
 POST	/admin/delete_film					FilmController.delete_film
 GET		/admin/tags							TagController.tags
-GET		/admin/delete_tag					TagController.delete_tag
+POST	/admin/delete_tag					TagController.delete_tag
+POST	/admin/save_tag						TagController.save_tag
+GET		/admin/setting						IndexController.setting
+POST	/admin/save_setting					IndexController.save_setting
+GET		/admin/slides						IndexController.slides
+POST	/admin/save_slides					IndexController.save_slides
 
