--- a/src/main/resources/route_front.conf
+++ b/src/main/resources/route_front.conf
@@ -1,5 +1,6 @@
 GET		/						IndexController.home
 GET		/page/:pageIndex		IndexController.home
+GET		/search					IndexController.search
 GET		/signin					IndexController.show_signin
 POST	/signin					IndexController.signin
 GET		/flim/:slug				IndexController.show_flim
