--- a/src/main/resources/route_admin.conf
+++ b/src/main/resources/route_admin.conf
@@ -14,4 +14,5 @@ GET		/admin/setting						IndexController.setting
 POST	/admin/save_setting					IndexController.save_setting
 GET		/admin/slides						IndexController.slides
 POST	/admin/save_slides					IndexController.save_slides
+POST	/admin/upload_img					UploadController.upload_img
 
