--- a/pom.xml
+++ b/pom.xml
@@ -1,54 +1,36 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<groupId>me.biezhi</groupId>
-	<artifactId>precious</artifactId>
-	<packaging>war</packaging>
+	<artifactId>wechat-robot</artifactId>
 	<version>0.0.1</version>
-	<name>precious Maven Webapp</name>
+	<packaging>jar</packaging>
+
+	<name>wechat-robot</name>
 	<url>http://maven.apache.org</url>
-	
+
 	<properties>
-		<maven.compiler.source>1.6</maven.compiler.source>
-		<maven.compiler.target>1.6</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>com.bladejava</groupId>
-			<artifactId>blade-core</artifactId>
-			<version>1.5.1</version>
+			<artifactId>blade-kit</artifactId>
+			<version>1.2.9-alpha</version>
 		</dependency>
-		<dependency>
-			<groupId>com.bladejava</groupId>
-			<artifactId>blade-sql2o</artifactId>
-			<version>1.3.0-alpha</version>
-		</dependency>
-		<dependency>
-			<groupId>com.github.subchen</groupId>
-			<artifactId>jetbrick-template</artifactId>
-			<version>2.0.12</version>
-		</dependency>
-		<dependency>
+
+		<!-- <dependency>
 			<groupId>com.alibaba</groupId>
-			<artifactId>druid</artifactId>
-			<version>1.0.15</version>
-		</dependency>
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.35</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.0.1</version>
-		</dependency>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.7</version>
+		</dependency> -->
+
+
 	</dependencies>
-	
+
 	<build>
-		<finalName>precious</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -59,20 +41,6 @@
 					<target>1.6</target>
 					<encoding>UTF8</encoding>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
-				<version>9.2.12.v20150709</version>
-				<configuration>
-					<scanIntervalSeconds>3</scanIntervalSeconds>
-					<webApp>
-				      <contextPath>/</contextPath>
-				    </webApp>
-			        <httpConnector>
-			          <port>9000</port>
-			        </httpConnector>
-		        </configuration>
 			</plugin>
 		</plugins>
 	</build>
