:wrench: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,4 @@ buildNumber.properties
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
 
+/assets/
